tests/e2e/object_int_index_invalid2.error
Error: syntax error in story at line 2, column 1

2|    a["-2"] = true
      ^

E0104: `map[int,boolean]` can't be indexed with `string`
